src/objects/Client__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>IF( NOT( ISBLANK( DOB__c ) ) ,
  IF( DATE( 2000 , MONTH( DOB__c) , DAY( DOB__c) ) &lt;= DATE( 2000 , MONTH( TODAY() ) , DAY( TODAY() ) ),
     YEAR (Today()) - YEAR ( DOB__c),
     YEAR (Today()) - YEAR ( DOB__c) -1 ),
  null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <formula>TEXT(MONTH(DOB__c)) +&apos;/&apos;+
TEXT(DAY(DOB__c)) +&apos;/&apos; +
TEXT(YEAR(DOB__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthdate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calm__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Calm</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conflict_Review__c</fullName>
        <label>Conflict Review</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PASSED</fullName>
                </value>
                <value>
                    <fullName>FAILED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conflict_Status__c</fullName>
        <label>Conflict Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conflict_Stoplight__c</fullName>
        <formula>IF(CONTAINS(Conflict_Status__c,&quot;PASSED&quot;),IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Conflict Passed&quot;),
IF(CONTAINS(Conflict_Status__c,&quot;FAILED&quot;),IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Conflict Failed&quot;),
IF((CONTAINS(Conflict_Status__c,&quot;REVIEW&quot;) &amp;&amp;  ISPICKVAL(Conflict_Review__c, &quot;FAILED&quot;)),IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;Conflict Failed&quot;),
IF((CONTAINS(Conflict_Status__c,&quot;REVIEW&quot;) &amp;&amp;  ISPICKVAL(Conflict_Review__c, &quot;PASSED&quot;)), IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Conflict Passed&quot;),
IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;Needs Review&quot;)))))</formula>
        <label>Conflict</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Expiration__c</fullName>
        <label>Consent Expiration</label>
        <summarizedField>Case__c.Consent_Expiration__c</summarizedField>
        <summaryForeignKey>Case__c.LinkToClient__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Consent_Status__c</fullName>
        <label>Consent Status</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consent_Stoplight__c</fullName>
        <formula>IF(  Consent_Status__c = &quot;FULL Consent to Share&quot; , 
IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;FULL Consent to Share&quot;),

IF( Consent_Status__c = &quot;RESTRICTED Consent to Share&quot; , 
IMAGE(&quot;/img/samples/light_yellow.gif&quot;, &quot;RESTRICTED Consent to Share&quot;), 

IMAGE(&quot;/img/samples/light_red.gif&quot;, &quot;DO NOT SHARE&quot;)) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consent To Share</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountyPick__c</fullName>
        <label>County Pick</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Adair</fullName>
                </value>
                <value>
                    <fullName>Alfalfa</fullName>
                </value>
                <value>
                    <fullName>Atoka</fullName>
                </value>
                <value>
                    <fullName>Beaver</fullName>
                </value>
                <value>
                    <fullName>Beckham</fullName>
                </value>
                <value>
                    <fullName>Blaine</fullName>
                </value>
                <value>
                    <fullName>Bryan</fullName>
                </value>
                <value>
                    <fullName>Caddo</fullName>
                </value>
                <value>
                    <fullName>Canadian</fullName>
                </value>
                <value>
                    <fullName>Carter</fullName>
                </value>
                <value>
                    <fullName>Cherokee</fullName>
                </value>
                <value>
                    <fullName>Choctaw</fullName>
                </value>
                <value>
                    <fullName>Cimarron</fullName>
                </value>
                <value>
                    <fullName>Cleveland</fullName>
                </value>
                <value>
                    <fullName>Coal</fullName>
                </value>
                <value>
                    <fullName>Comanche</fullName>
                </value>
                <value>
                    <fullName>Cotton</fullName>
                </value>
                <value>
                    <fullName>Craig</fullName>
                </value>
                <value>
                    <fullName>Creek</fullName>
                </value>
                <value>
                    <fullName>Custer</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>Dewey</fullName>
                </value>
                <value>
                    <fullName>Ellis</fullName>
                </value>
                <value>
                    <fullName>Garfield</fullName>
                </value>
                <value>
                    <fullName>Garvin</fullName>
                </value>
                <value>
                    <fullName>Grady</fullName>
                </value>
                <value>
                    <fullName>Grant</fullName>
                </value>
                <value>
                    <fullName>Greer</fullName>
                </value>
                <value>
                    <fullName>Harmon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentAddress__c</fullName>
        <formula>Address__c + &apos; &apos; + City__c + &apos; &apos; + TEXT(State__c) + &apos; &apos; + ZipCode__c + &apos; &apos; + County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FirstLast__c</fullName>
        <formula>FirstName__c + &apos; &apos; + LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FirstLast</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Transgender</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Screening__c</fullName>
        <label>Last Screening</label>
        <summarizedField>Screening__c.CreatedDate</summarizedField>
        <summaryForeignKey>Screening__c.LinkToClient__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>MailingAddress__c</fullName>
        <label>Mailing Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingCity__c</fullName>
        <label>Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MailingStatePick__c</fullName>
        <label>Mailing State Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MailingZip__c</fullName>
        <label>Mailing Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MiddleName__c</fullName>
        <label>Middle Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>FirstName__c + &apos; &apos; + MiddleName__c + &apos; &apos; + LastName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>OwnRent__c</fullName>
        <label>Own or Rent?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Neither</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PhysicalStatePick__c</fullName>
        <label>Physical State Pick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oklahoma</fullName>
                </value>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PrimaryLanguageOther__c</fullName>
        <label>Primary Language Other</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PrimaryLanguage__c</fullName>
        <label>Primary Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Sign Language</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PropertyDetails__c</fullName>
        <inlineHelpText>Who is named on the deed or lease?</inlineHelpText>
        <label>Deed or Lease Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RaceEthnicity__c</fullName>
        <label>Race/Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>RaceEthnicity</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SafeEmail__c</fullName>
        <description>A safe email address we can reach you at.</description>
        <inlineHelpText>A safe email address we can reach you at.</inlineHelpText>
        <label>Safe Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SafePhoneNumber__c</fullName>
        <description>A safe number to reach you at.</description>
        <inlineHelpText>A safe number to reach you at.</inlineHelpText>
        <label>Safe Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Screenings__c</fullName>
        <label>Screenings</label>
        <summaryForeignKey>Screening__c.LinkToClient__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Jr.</fullName>
                </value>
                <value>
                    <fullName>Sr.</fullName>
                </value>
                <value>
                    <fullName>II</fullName>
                </value>
                <value>
                    <fullName>III</fullName>
                </value>
                <value>
                    <fullName>IV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Client_Emergency_Services__c</fullName>
        <label>Emergency Services</label>
        <summarizedField>Screening__c.Emergency_Services__c</summarizedField>
        <summaryForeignKey>Screening__c.LinkToClient__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Client</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LastName__c</columns>
        <columns>MiddleName__c</columns>
        <columns>FirstName__c</columns>
        <columns>Alias__c</columns>
        <columns>DOB__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Client -16- {000000}</displayFormat>
        <label>Client</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>